--- a/Literatur.bib
+++ b/Literatur.bib
@@ -529,6 +529,34 @@
   url    = {https://rancher.com/docs/k3s/latest/en/installation/network-options/},
 }
 
+@WWW{bk-gh-ke-node-test,
+  author = {Bernd Klaus},
+  date   = {2022-04-09},
+  title  = {KubeEdge node security check},
+  url    = {https://github.com/Berndinox/K8sEdge/blob/main/Tests/it-security/kubedge-node-test.md},
+}
+
+@WWW{ke-secure-fw,
+  author = {The KubeEdge Authors},
+  date   = {2021-01-08},
+  title  = {Secure kubeedge using SPIFFE/SPIRE},
+  url    = {https://kubeedge.io/ko/blog/secure-kubeedge/},
+}
+
+@WWW{em-security,
+  author = {The EdgeMesh Authors},
+  date   = {2022-01-27},
+  title  = {EdgeMesh Security},
+  url    = {https://edgemesh.netlify.app/guide/security.html},
+}
+
+@WWW{em-getstart,
+  author = {The EdgeMesh Authors},
+  date   = {2022-02-24},
+  title  = {Getting Started},
+  url    = {https://edgemesh.netlify.app/guide/getting-started.html},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
